2012-05-07  Araki Ken  <arakiken@users.sf.net>

	* ml_pty_ssh.c: Command string to be executed over ssh connection is
	  braced by "" if it contains a space.

	* x_screen_manager.c: A problem which failed to open a new screen because
	  command string to be executed over ssh connection wasn't initialized
	  is fixed.

2012-05-06  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.[ch], ml_term.[ch], ml_term_manager.c, ml_vt100_parser.c,
	  ml_pty_intern.h, x_screen.c, x_screen_manager.c:
	  Experimental implementation of multiple windows per one pty
	  (MULTI_WINDOWS_PER_PTY) is removed.

2012-05-06  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c, x_im.c: Hack to avoid calling ibus_init() more than once
	  is added. (If ibus daemon was not found last time and ibus_init() is
	  called again, segfault happens.)

2012-05-06  Araki Ken  <arakiken@users.sf.net>

	* etc/font.win32.indic: Added.

	* README.indic, aafont.indic: Updated.

	* ml_iscii.c: libiscii_xxx.so modules are possible to be loaded from
	  current working directory.

	* win32/x_font.c: is_var_col_width of ISCII font is always true.

2012-05-05  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.[ch], x_screen.c:
	  FocusIn/FocusOut event tracking (CSI ? 1004 h and CSI ? 1004 l) is supported.

2012-05-04  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java:
	  The way to get mouse position is improved.

	* MLTermPty.java:
	  isTrackingMouse() method is added to check mouse traking mode is on or off.

	* ml_vt100_parser.[ch], x_screen.c, java/MLTermPty.c:
	  Extended mouse report(SGR/URXVT) is supported.

	* x_draw_str.c: Even if fg/bg color is reversed, bd_color and ul_color
	  options work correctly.
	  (Thanks to Andi Cristian Serbanescu)

	* mkf/script/config.guess, kiklib/script/config.guess,
	  script/config.guess: updated (timestamp='2012-02-10')

	* mkf/script/config.sub, kiklib/script/config.sub,
	  script/config.sub: updated (timestamp='2012-04-18')

	* win32/x_window.c: Fixed typo.
