@@ -1,3 +1,4 @@
+#### Default settings
 # UNUSED=IM_HOTKEY
 # Control+F1=OPEN_SCREEN
 # Control+F2=OPEN_PTY
@@ -9,10 +10,10 @@
 # UNUSED=SWITCH_OSC52
 # UNUSED=EXIT_PROGRAM
 
-# Control+F5="w3m http://www.google.co.jp/\n"
-# Control+F6="proto:font_size=12;encoding=utf8"
-# Control+F7="proto:input_method=ibus"
-# Control+F8="proto:aafont:DEFAULT=Kochi Gothic"
-# Control+F9="proto:color:black=rgb:ff/00/00"
-
-
+#### Examples
+# Control+F5="proto:mlclient --serv localhost -e screen -xR"
+# Control+F6="w3m http://www.google.co.jp/\n"
+# Control+F7="proto:font_size=12;encoding=utf8"
+# Control+F8="proto:input_method=ibus"
+# Control+F9="proto:aafont:DEFAULT=Kochi Gothic"
+# Control+F10="proto:color:black=rgb:ff/00/00"
