@@ -1,3 +1,11 @@
+2012-05-10  Araki Ken  <arakiken@users.sf.net>
+
+	* Makefile.in, kik_pty_helper.c, ml_config_menu.c, x_imagelib.c:
+	  SF Patch #3524577 and #3524578 is merged.
+	  (Thanks to Ahmed El-Mahmoudy)
+
+	* etc/key: Updated.
+
 2012-05-07  Araki Ken  <arakiken@users.sf.net>
 
 	* ml_pty_ssh.c: Command string to be executed over ssh connection is
